Bug 157365 - Options > LibreOffice Writer changes page color scheme from Dark to Light (steps in comment 2)
Summary: Options > LibreOffice Writer changes page color scheme from Dark to Light (st...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: high normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog-Colours Dark-Mode
  Show dependency treegraph
 
Reported: 2023-09-21 13:58 UTC by Dynamo
Modified: 2025-10-20 15:04 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dynamo 2023-09-21 13:58:42 UTC
Description:
Changing default fonts under Options/LibreOffice Writer/Basic Fonts (Western) to Calibri from 'Liberation Sans' for all options forces document background to display as white.

If I go to Options/LibreOffice/Application Colours and set it back to Dark, or change individual settings like Document background to Black, clicking apply or okay causes it to reset back to white and ignore my settings.

To fix the issue, I selected 

Steps to Reproduce:
1.go to Options/LibreOffice/Application Colours and set it to Automatic:Dark. page colour is now dark.
2.go to Options/LibreOffice Writer/Basic Fonts (Western) and change all fonts to Calibri from 'Liberation Sans' for all options. click apply or ok.
3.voila, hideous glaring white document colour!
4. go back to  Options/LibreOffice/Application Colours and set it to Automatic:Light. page colour is now dark again like its meant to be.

Actual Results:
the document colour changes to white, when its set to display as dark grey/black using the Automatic: dark option

Expected Results:
The font should have changed to Calibri, and the document colour should still be whatever i set it to (black). changing default fonts should not affect document colour


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: CL threaded
Comment 1 Kira Tubo 2023-10-05 04:16:44 UTC
Reproduced as described except for step 4. Switching Automatic from Dark to Light keeps the page color as light, as expected. 

For me, I didn't even need to change the default font. I just needed to be within any of the pages of LibreOffice Writer, click OK, and the page color would change. It would be good if others would confirm the steps below:  

1. Go to Tools > Options > LibreOffice > Application Colors
2. Change Automatic to "Dark"
3. Click OK
4.  Go to Tools > Options and expand LibreOffice Writer
5. Click on any page within LibreOffice Writer (e.g. General, View, Formatting Aids, etc.)
6. Click OK

-------------------

Reproduced in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dd7fc07f83416a3d8a444947b7d28f7347520d6a
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Not reproduced in:

Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 stragu 2023-10-05 15:50:55 UTC
For me, on Linux, even simpler steps:

1. Go to Tools > Options > LibreOffice > Application Colours
2. Change scheme to "Dark" (document background automatically goes dark even without pressing "Apply")
3. Open any page within LibreOffice Writer (e.g. General, View, Formatting Aids, etc.)
4. Click OK

Result: document background back to white.

Agree with Kira that it started in 7.6.

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Not reproduced in:

Version: 7.5.7.1 (X86_64) / LibreOffice Community
Build ID: 47eb0cf7efbacdee9b19ae25d6752381ede23126
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Kira Tubo 2023-10-05 21:12:03 UTC
Bibisected win64-7.6. Looks like the issue started at this commit: https://git.libreoffice.org/core/+/1916d161902bdd52b8cfa5b29153c8f8c39fce52

Adding Paris Oplopoios to cc. @Paris, here are simplified steps from Comment 2: 

>1. Go to Tools > Options > LibreOffice > Application Colours
>2. Change scheme to "Dark" (document background automatically goes dark even without pressing "Apply")
>3. Open any page within LibreOffice Writer (e.g. General, View, Formatting Aids, etc.)
>4. Click OK

-----------------

commit 1916d161902bdd52b8cfa5b29153c8f8c39fce52	[log]
author	Paris Oplopoios <paris.oplopoios@collabora.com>	Wed Mar 08 17:34:02 2023 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	Thu Mar 16 08:41:38 2023 +0000
tree fdb789357ef4e58e3f26066235b5928efcf63437
parent ee8e9b993595e728f827a5fe6ab1ae5fb1f6aaae [diff]

------------------

commit fe420d4fcd358840a2e45b4985a69f92794b9b55
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Mar 16 03:26:24 2023 -0700

    source 1916d161902bdd52b8cfa5b29153c8f8c39fce52
Comment 4 stragu 2024-05-15 01:27:46 UTC
Just ran into this again with a recent daily build:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0dcaff6043e1f24ce0fa354dff80a86e40622247
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Now that the Dark scheme is often applied automatically when Dark Mode is on, the issue becomes more common.

Paris hasn't chimed in, so wondering if Mike or Miklos have an idea, as you were involved with reviewing?
Comment 5 Mike Kaganski 2024-05-15 05:14:05 UTC
(In reply to Stéphane Guillou (stragu) from comment #4)
> Mike ... you were involved with reviewing?

I didn't. I only mentioned there (after the fact), that there was a problem with implementation.
Comment 6 Miklos Vajna 2024-05-15 06:49:33 UTC
I'll check if somebody from the Collabora side has cycles to look at this.
Comment 7 Julien Nabet 2024-05-17 22:15:10 UTC
Just for information, I reproduce this on pc Debian x86-64 with master sources updated today.
I noticed that after setting Dark mode and opening any page, I get indeed white background BUT if I close LO and reopen it, background is dark.
Then if I open any of the page from comment 2, the background stays dark.

In the same way, if after all this, I put back light theme, it works but if I open any page as in comment 2, the background is dark again.

Taking a look at the comment of Paris' patch, I'm not sure to understand what was the purpose.
I mean either you want dark theme or you want light theme.
But ok, let's say it might be useful to compare both look and feel (personally, I'd have used a screenshot but that's another story), when closing LO, what should be retained? The config of the last view closed? the config of first view opened? Other?
Comment 8 Justin L 2025-10-14 19:01:06 UTC
Proposed fix at https://gerrit.libreoffice.org/c/core/+/192410

Alternate steps to reproduce (assuming current document background is automatic):
1.) open a file
2.) change Document background to black
3a.) File - Reload
3b.) File - New
3c.) File - Open

In all these cases, the document background was automatic (until soffice was fully restarted).
Comment 9 Commit Notification 2025-10-15 11:10:33 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2b0bc0ed83cc0ec03ea30570dc7538df22f303b1

tdf#157365 sw: apply colorConfig change to SwModule

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-10-20 15:04:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/482871586febdea7d5ccef815f8ad33ffb40c095

tdf#157365 sw: apply colorConfig change to SwModule

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.