tdf#157365 sw: apply colorConfig change to SwModule

This fixes a 7.6 regression from
commit 1916d161902bdd52b8cfa5b29153c8f8c39fce52.

Changes made were not immediately applying to new documents,
and perhaps not even to the current document
if the user also looked at SwModule options.

Change-Id: I5fa21cac57ab1bbfc96b9d6d2b7f403b32103e84
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192410
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>